%% Data model / schema ER diagram (DESIGN §7)
%% Source of truth: docs/DESIGN.md — regenerate images with `make diagrams`.
erDiagram
    USER ||--o{ MEMBERSHIP : "has (1 per tenant)"
    TENANT ||--o{ MEMBERSHIP : contains
    TENANT ||--o{ ORG_UNIT : has
    TENANT ||--o{ ROLE : defines
    TENANT ||--o{ POLICY : defines
    TENANT ||--o{ AUDIT_LOG : records
    ORG_UNIT ||--o{ ORG_UNIT : parent_of
    MEMBERSHIP }o--|| ORG_UNIT : belongs_to
    MEMBERSHIP }o--o{ ROLE : "membership_roles"
    MEMBERSHIP }o--o{ PERMISSION : "membership_permissions (direct grant)"
    ROLE }o--o{ ROLE : "role_hierarchy"
    ROLE }o--o{ PERMISSION : "role_permissions"
    PERMISSION ||--o{ POLICY : "policy_target"

    TENANT {
      uuid id PK
      string name
      string status "active|suspended"
      string tier "pooled|enterprise"
      timestamptz created_at
    }
    USER {
      uuid id PK
      string email "GLOBALLY unique"
      string password_hash
      string status "active|disabled (global)"
      jsonb mfa
      timestamptz created_at
    }
    MEMBERSHIP {
      uuid id PK
      uuid user_id FK
      uuid tenant_id FK
      uuid org_unit_id FK
      string status "invited|active|suspended"
      timestamptz joined_at
      "unique(user_id, tenant_id)"
    }
    ORG_UNIT {
      uuid id PK
      uuid tenant_id FK
      uuid parent_id FK "nullable"
      string name
    }
    ROLE {
      uuid id PK
      uuid tenant_id FK
      string name
      bool is_system
      string description
    }
    PERMISSION {
      uuid id PK
      string service
      string resource
      string action
      string description
    }
    ROLE_PERMISSIONS {
      uuid role_id FK
      uuid permission_id FK
    }
    ROLE_HIERARCHY {
      uuid parent_role_id FK
      uuid child_role_id FK
    }
    MEMBERSHIP_ROLES {
      uuid membership_id FK
      uuid role_id FK
      uuid scope_org_unit_id FK "nullable scope"
    }
    MEMBERSHIP_PERMISSIONS {
      uuid id PK
      uuid tenant_id FK
      uuid membership_id FK
      uuid permission_id FK
      "direct per-user grant; unique(membership_id, permission_id)"
    }
    POLICY {
      uuid id PK
      uuid tenant_id FK
      uuid permission_id FK
      string name
      jsonb condition
      string effect "allow|deny"
      int version
      bool enabled
    }
    AUDIT_LOG {
      uuid id PK
      uuid tenant_id
      uuid actor_user_id
      string action "service:resource:action"
      string decision "allow|deny"
      string reason
      jsonb context
      timestamptz created_at
    }
    SESSION {
      uuid id PK
      uuid user_id FK "global user"
      uuid active_tenant_id FK "tenant this token is scoped to"
      string refresh_token_hash
      timestamptz expires_at
      bool revoked
    }
